--- a/metadata.yaml
+++ b/metadata.yaml
@@ -32,5 +32,6 @@ rights_url: http://creativecommons.org/about/pdm
 subjects:
 - !lcsh 'Home missions'
 - !lcc 'BV'
+- GITenberg
 title: Home Missions in Action
 url: http://www.gutenberg.org/ebooks/8427
